--- a/presentation/src/main/res/layout/fragment_add_record.xml
+++ b/presentation/src/main/res/layout/fragment_add_record.xml
@@ -28,7 +28,8 @@
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:text="08.07.21"
+            android:text="@{viewModel.recordDate}"
+            android:onClick="@{() -> viewModel.datePickerClicked()}"
             tools:text="08.07.21" />
 
         <ImageView
