--- a/presentation/src/main/res/layout/fragment_statistics.xml
+++ b/presentation/src/main/res/layout/fragment_statistics.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewModel"
-            type="com.san.leng.ui.dashboard.DashboardViewModel" />
+            type="com.san.leng.ui.statistics.StatisticsViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
