--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -75,4 +75,6 @@
         <item name="shapeAppearance">?attr/shapeAppearanceMediumComponent</item>
     </style>
 
+    <style name="Toolbar" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
