--- a/presentation/src/main/res/layout/fragment_records_coordinator.xml
+++ b/presentation/src/main/res/layout/fragment_records_coordinator.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.san.leng.ui.records.RecordsViewModel" />
@@ -19,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/home_city_info_height"
             android:fitsSystemWindows="true"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark" >
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/toolbar_layout"
@@ -27,17 +28,16 @@
                 android:layout_height="match_parent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 android:fitsSystemWindows="true"
-                android:background="@drawable/collapsing_toolbar_gradient"
-                app:contentScrim="@color/white"
+                app:contentScrim="?attr/colorPrimary"
                 app:toolbarId="@+id/toolbar" >
 
                 <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/home_city_info_height"
                     app:layout_collapseMode="parallax"
-                    android:background="@drawable/logo_no_fill"
+                    android:background="@drawable/profilepic"
                     android:fitsSystemWindows="true"
+                    android:minHeight="100dp"
                     android:scaleType="centerCrop" />
 
                 <androidx.appcompat.widget.Toolbar
