--- a/presentation/src/main/res/drawable/collapsing_toolbar_gradient.xml
+++ b/presentation/src/main/res/drawable/collapsing_toolbar_gradient.xml
@@ -5,7 +5,7 @@
             <gradient
                 android:angle="90"
                 android:startColor="#FFFFFF"
-                android:endColor="#009688"
+                android:endColor="#2A632C"
                 android:type="linear" />
         </shape>
     </item>
