--- a/presentation/src/main/res/menu/activity_main_drawer.xml
+++ b/presentation/src/main/res/menu/activity_main_drawer.xml
@@ -6,23 +6,23 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/records_fragment"
-            android:icon="@drawable/ic_search"
+            android:icon="@drawable/ic_records"
             android:title="@string/records_label" />
         <item
             android:id="@+id/dictionary_fragment"
-            android:icon="@drawable/ic_search"
+            android:icon="@drawable/ic_dictionary"
             android:title="@string/dictionary_label" />
         <item
             android:id="@+id/useful_info_fragment"
-            android:icon="@drawable/ic_search"
+            android:icon="@drawable/ic_info"
             android:title="@string/useful_info_label" />
         <item
             android:id="@+id/statistics_fragment"
-            android:icon="@drawable/ic_search"
+            android:icon="@drawable/ic_statistics"
             android:title="@string/statistics_label" />
         <item
             android:id="@+id/settings_fragment"
-            android:icon="@drawable/ic_search"
+            android:icon="@drawable/ic_settings"
             android:title="@string/settings_label" />
     </group>
 
