--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="home_city_info_height">260dp</dimen>
     <dimen name="ct_expandedTitleMarginEnd">64dp</dimen>
     <dimen name="ct_expandedTitleMarginStart">48dp</dimen>
+    <dimen name="add_edit_records_save_button">10sp</dimen>
 </resources>
