--- a/presentation/src/main/res/layout/fragment_add_record.xml
+++ b/presentation/src/main/res/layout/fragment_add_record.xml
@@ -5,106 +5,150 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.san.leng.ui.records.addeditrecord.AddEditRecordViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="8dp"
-        android:paddingStart="8dp"
-        android:paddingLeft="8dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="8dp"
-        android:paddingRight="8dp"
-        android:paddingBottom="8dp"
-        tools:context=".records.add_record.AddRecordFragment">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/record_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="@{viewModel.recordDate}"
-            android:onClick="@{() -> viewModel.datePickerClicked()}"
-            tools:text="08.07.21" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/add_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="8dp"
+            android:background="@color/add_fragment_bg_color"
+            tools:context=".records.add_record.AddRecordFragment">
 
-        <ImageView
-            android:id="@+id/date_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:src="@drawable/ic_arrow_drop_down"
-            android:textSize="8sp"
-            android:onClick="@{() -> viewModel.datePickerClicked()}"
-            app:layout_constraintStart_toEndOf="@+id/record_date"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/record_save"
-            android:layout_width="60dp"
-            android:layout_height="40dp"
-            android:padding="0dp"
-            android:text="@string/record_save_button"
-            android:textSize="8sp"
-            android:onClick="@{() -> viewModel.saveRecord()}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/record_title"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:hint="@string/add_record_title_hint"
-            android:text="@={viewModel.title}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/record_save" />
-
-        <ScrollView
-            android:id="@+id/scrollView"
-            android:layout_width="0dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="4dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/record_title">
-
-            <EditText
-                android:id="@+id/record_text"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="top"
-                android:hint="@string/add_record_desc_hint"
-                android:inputType="text|textMultiLine"
-                android:text="@={viewModel.description}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.423"
+            <TextView
+                android:id="@+id/record_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{viewModel.recordDate}"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/record_title"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="08.07.21" />
 
-        </ScrollView>
+            <ImageView
+                android:id="@+id/date_picker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_arrow_drop_down"
+                android:textSize="8sp"
+                app:layout_constraintStart_toEndOf="@+id/record_date"
+                app:layout_constraintTop_toTopOf="parent" />
 
-<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/record_save"
-            android:layout_width="wrap_content"
+            <Button
+                android:id="@+id/record_save"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:backgroundTint="@color/colorAccent"
+                android:onClick="@{() -> viewModel.saveRecord()}"
+                android:padding="0dp"
+                android:text="@string/record_save_button"
+                android:textSize="@dimen/add_edit_records_save_button"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/record_bg_picker"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="8dp"
+                android:padding="0dp"
+                android:text="BG"
+                android:textSize="10sp"
+                app:layout_constraintEnd_toStartOf="@+id/record_save"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ScrollView
+                android:id="@+id/scrollView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/record_save">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/record_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="@null"
+                        android:hint="@string/add_record_title_hint"
+                        android:text="@={viewModel.title}" />
+
+                    <EditText
+                        android:id="@+id/record_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:background="@null"
+                        android:hint="@string/add_record_desc_hint"
+                        android:inputType="text|textMultiLine"
+                        android:text="@={viewModel.description}" />
+
+                </LinearLayout>
+
+            </ScrollView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/background_picker"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:clickable="true"
-            android:onClick="@{() -> viewModel.saveRecord()}"
-            app:layout_anchorGravity="bottom|right|end"
+            android:background="@color/white"
+            android:orientation="horizontal"
+            android:layout_gravity="bottom"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_add" />-->
+            app:layout_constraintStart_toStartOf="parent">
 
+            <LinearLayout
+                android:id="@+id/bg_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone"
+                app:layout_constraintHeight_max="250dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="8dp"
+                    android:text="@string/add_fragment_background"
+                    android:textAlignment="center" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/record_bg_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="vertical"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="3"
+                    tools:listitem="@layout/background_item" />
+
+            </LinearLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </FrameLayout>
 </layout>
